plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenLocal()
    jcenter()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

/**
 * Configure the compiler task, test task, start script creation task, and the run task to enable Java language "Preview
 * Features"
 */
tasks.withType(JavaCompile) {
    options.compilerArgs += ["--enable-preview"]
}
tasks.test {
    jvmArgs = ["--enable-preview"]
}
tasks.startScripts {
    defaultJvmOpts = ["--enable-preview"]
}
tasks.run {
    jvmArgs = ["--enable-preview"]
}

application {
    mainClassName = 'dgroomes.App'
}

test {
    useJUnitPlatform()
}
